--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.2",
+        "react-router": "^5.2.0",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "sass": "^1.30.0",
